[gd_scene load_steps=10 format=2]

[ext_resource path="res://Objects/Game_modes/FFA_mode.gd" type="Script" id=1]
[ext_resource path="res://Menus/Inventory/label_bg.png" type="Texture" id=2]
[ext_resource path="res://Menus/Inventory/label2.png" type="Texture" id=3]
[ext_resource path="res://font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Antaro.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Sfx/QuakeSounds/triplekill.wav" type="AudioStream" id=6]
[ext_resource path="res://Sfx/QuakeSounds/multikill.wav" type="AudioStream" id=7]
[ext_resource path="res://Sfx/QuakeSounds/rampage.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
use_filter = true
font_data = ExtResource( 5 )

[node name="FFA_mode" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Time_container" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -54.5
margin_right = 54.5
margin_bottom = 54.0
texture = ExtResource( 2 )
expand = true

[node name="panel" type="TextureRect" parent="Time_container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.5
margin_top = -17.5
margin_right = 43.5
margin_bottom = 17.5
texture = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="Time_container/panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -21.5
margin_top = -12.0
margin_right = 21.5
margin_bottom = 12.0
custom_fonts/font = ExtResource( 4 )
text = "5:10"

[node name="uptime" type="Timer" parent="Time_container"]
autostart = true

[node name="Label" type="Label" parent="."]
margin_left = 466.226
margin_top = 145.871
margin_right = 773.226
margin_bottom = 177.871
custom_fonts/font = SubResource( 1 )

[node name="Timer" type="Timer" parent="Label"]
wait_time = 0.75

[node name="Tween" type="Tween" parent="."]

[node name="quake_sounds" type="Node" parent="."]

[node name="triple_kill" type="AudioStreamPlayer" parent="quake_sounds"]
stream = ExtResource( 6 )

[node name="multi_kill" type="AudioStreamPlayer" parent="quake_sounds"]
stream = ExtResource( 7 )

[node name="rampage" type="AudioStreamPlayer" parent="quake_sounds"]
stream = ExtResource( 8 )
[connection signal="timeout" from="Time_container/uptime" to="." method="_on_uptime_timeout"]
[connection signal="timeout" from="Label/Timer" to="." method="_on_Timer_timeout"]
